# Cobalt

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CobaltAnalysisRules.ruleset  README.md  THIRD_PARTY_LICENSES.md
Examples/SDLExample/: CMakeLists.txt  main.cpp
Examples/SDLExample/Standalone/: CMakeLists.txt
Libraries/Cobalt/CBindings/: CBindings.pkg  CMakeLists.txt  DataArray.cpp  DataArray.h  DataArrayOutput.cpp  DataArrayOutput.h  DefaultState.cpp  DefaultState.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferOutput.cpp  FrameBufferOutput.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsDeviceEnumerator.cpp  GraphicsDeviceEnumerator.h  IndexAttribute.cpp  IndexAttribute.h  IndexBuffer.cpp  IndexBuffer.h  Macros.h  PlatformBindings.pkg  ProgramNode.cpp  ProgramNode.h  RenderPassNode.cpp  RenderPassNode.h  RenderableNode.cpp  RenderableNode.h  Renderer.cpp  Renderer.h  RendererPlugin.cpp  RendererPlugin.h  ResourceArray.cpp  ResourceArray.h  Result.h  ShaderProgram.cpp  ShaderProgram.h  ShaderSourceInfoAIR.h  ShaderSourceInfoBase.h  ShaderSourceInfoDXBC.h  (+72 more)
Libraries/Cobalt/Debug/: CMakeLists.txt  Debug.h  Debug.inl  Debug.pkg  Warnings.h
Libraries/Cobalt/Logging/: CMakeLists.txt  ILogTarget.h  LogManager.h  LogManager.inl  LogTargetCallback.h  LogTargetCallback.inl  LogTargetConsole.h  LogTargetConsole.inl  LogTargetFile.h  LogTargetFile.inl  LogTargetStandardOut.h  LogTargetStandardOut.inl  Logger.h  Logger.inl  Logging.pkg
Libraries/Cobalt/LoggingInterface/: CMakeLists.txt  ILogger.h  ILogger.inl  LoggingInterface.pkg  NullLogger.h  NullLogger.inl
Libraries/Cobalt/Marshalling/: CMakeLists.txt  CalculateDecomposedSTLContainerSize.h  CalculateDecomposedSTLContainerSize.inl  CalculateSTLContainerNestingDepth.h  CalculateSTLContainerNestingDepth.inl  ClearSTLContainer.h  ClearSTLContainer.inl  CreateSTLContainerItemArray.h  CreateSTLContainerItemArray.inl  CreateSTLContainerKeyMarshallers.h  CreateSTLContainerKeyMarshallers.inl  DecomposeSTLContainer.h  DecomposeSTLContainer.inl  DeleteSTLContainerItemArray.h  DeleteSTLContainerItemArray.inl  DeleteSTLContainerKeyMarshallers.h  DeleteSTLContainerKeyMarshallers.inl  EnsureSTLContainerKeySizesMatch.h  (+39 more)
Renderers/Direct3D11Renderer/: BindingHelpers.cpp  BindingHelpers.h  BindingHelpers.inl  CMakeLists.txt  Direct3D11RendererFactory.cpp  Direct3D11RendererFactory.h  Direct3DDataArray.cpp  Direct3DDataArray.h  Direct3DDataArrayOutput.h  Direct3DFrameBuffer.cpp  Direct3DFrameBuffer.h  Direct3DFrameBufferOutput.cpp  Direct3DFrameBufferOutput.h  Direct3DGraphicsDevice.cpp  Direct3DGraphicsDevice.h  Direct3DGraphicsDeviceEnumerator.cpp  Direct3DGraphicsDeviceEnumerator.h  Direct3DHeaders.h  Direct3DIndexBuffer.cpp  Direct3DIndexBuffer.h  Direct3DNode.h  Direct3DProgramNode.cpp  Direct3DProgramNode.h  Direct3DRenderPassNode.cpp  Direct3DRenderPassNode.h  Direct3DRenderableNode.cpp  Direct3DRenderableNode.h  Direct3DRenderer.cpp  Direct3DRenderer.h  Direct3DRenderer.inl  Direct3DShaderProgram.cpp  Direct3DShaderProgram.h  Direct3DStateBuffer.cpp  Direct3DStateBuffer.h  Direct3DStateContainer.inl  Direct3DStateGroupNode.cpp  Direct3DStateGroupNode.h  Direct3DTexelArray.cpp  Direct3DTexelArray.h  Direct3DTexelArrayOutput.cpp  (+26 more)
Renderers/OpenGLRenderer/: BindingHelpers.cpp  BindingHelpers.h  BindingHelpers.inl  CMakeLists.txt  OpenGL3RendererFactory.cpp  OpenGL3RendererFactory.h  OpenGL4RendererFactory.cpp  OpenGL4RendererFactory.h  OpenGLDataArray.cpp  OpenGLDataArray.h  OpenGLDataArrayOutput.cpp  OpenGLDataArrayOutput.h  OpenGLDebug.h  OpenGLDefaultState.cpp  OpenGLDefaultState.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLFrameBufferOutput.cpp  OpenGLFrameBufferOutput.h  OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.h  OpenGLGraphicsDeviceEnumerator.cpp  OpenGLGraphicsDeviceEnumerator.h  OpenGLHeaders.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLNode.h  OpenGLNode.inl  OpenGLProgramNode.cpp  OpenGLProgramNode.h  OpenGLRenderPassNode.cpp  OpenGLRenderPassNode.h  OpenGLRenderableNode.cpp  OpenGLRenderableNode.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRenderer.inl  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLStateBuffer.cpp  (+47 more)
Renderers/VulkanRenderer/: BindingHelpers.cpp  BindingHelpers.h  BindingHelpers.inl  CMakeLists.txt  VulkanDataArray.cpp  VulkanDataArray.h  VulkanDataArrayOutput.cpp  VulkanDataArrayOutput.h  VulkanDefaultState.cpp  VulkanDefaultState.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanFrameBufferOutput.cpp  VulkanFrameBufferOutput.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanGraphicsDeviceEnumerator.cpp  VulkanGraphicsDeviceEnumerator.h  VulkanHeaders.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanInstanceData.cpp  VulkanInstanceData.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanNode.h  VulkanNode.inl  VulkanProgramNode.cpp  VulkanProgramNode.h  VulkanRenderPassNode.cpp  VulkanRenderPassNode.h  VulkanRenderableNode.cpp  VulkanRenderableNode.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRenderer.inl  VulkanRendererFactory.cpp  VulkanRendererFactory.h  VulkanShaderProgram.cpp  VulkanShaderProgram.h  (+49 more)
Testing/AutomatedTests/: AutomatedTests.manifest  AutomatedTests.rc  CMakeLists.txt  Configuration.h  Debug.h  GeometryHelper.cpp  GeometryHelper.h  ITestSession.h  IThreadInvocation.h  IThreadInvocation.inl  IUnitTest.h  MenuItem.Cocoa.mm  MenuItem.Posix.cpp  MenuItem.Win32.cpp  MenuItem.h  MipmappingHelper.cpp  MipmappingHelper.h  PerformanceTestBase.cpp  PerformanceTestBase.h  PseudoRandomGenerator.cpp  PseudoRandomGenerator.h  StanfordBunnyIndices.cpp  StanfordBunnyVertices.cpp  StringHelpers.h  TestManager.cpp  TestManager.h  TestRegistry.cpp  TestRegistry.h  TestSession.cpp  TestSession.h  TextureHelper.cpp  TextureHelper.h  TexturedQuadSceneHelper.cpp  TexturedQuadSceneHelper.h  TransformHelper.cpp  TransformHelper.h  UIThreadInvocation.Cocoa.cpp  UIThreadInvocation.Cocoa.h  UIThreadInvocation.Win32.cpp  UIThreadInvocation.Win32.h  (+11 more)
Testing/CBindingsStaticTest/: CMakeLists.txt  main.c
(+1092 files in other folders)
