# Specify our source files
set(SDLExample_SOURCES
    "main.cpp"
)

# Override some files as objective C++ for Cocoa support on macos
if (APPLE)
    set_source_files_properties(main.cpp PROPERTIES LANGUAGE OBJCXX)
endif()

# Define our project targets. Note that we boost this example project to C++20 support for notify/wait functionality
# on atomic_flag, which makes the code cleaner and a better reference. We don't want to bump up the entire solution
# from C++17 yet at this stage however.
add_executable(SDLExample ${SDLExample_SOURCES} ${COBALT_VERSION_FILES})
set_property(TARGET SDLExample PROPERTY CXX_STANDARD 20)
register_clang_format_and_tidy_target(SDLExample)
cobalt_apply_compiler_warning_settings(SDLExample)
add_rpath(SDLExample ".")

# Specify our project dependencies
if (WIN32)
    add_dependencies(
        SDLExample
        Cobalt::Direct3D11Renderer
        Cobalt::Direct3D12Renderer
        Cobalt::OpenGL3Renderer
        Cobalt::OpenGL4Renderer
        Cobalt::VulkanRenderer
    )
elseif(APPLE)
    add_dependencies(
        SDLExample
        Cobalt::OpenGL3Renderer
        Cobalt::VulkanRenderer
    )
else()
    add_dependencies(
        SDLExample
        Cobalt::OpenGL3Renderer
        Cobalt::OpenGL4Renderer
        Cobalt::VulkanRenderer
    )
endif()
target_link_libraries(SDLExample
    PRIVATE
        Cobalt::Logging
        Cobalt::RendererInterface
        SDL3::SDL3
)
if(APPLE)
    target_link_libraries(SDLExample
        PRIVATE
            "-framework Cocoa"
            "-framework QuartzCore"
            "-framework Metal"
    )
elseif(UNIX)
    target_link_libraries(SDLExample
        PRIVATE
            X11
            X11Xcb
            xdg-shell-protocol
    )
endif()

# Transfer required files to their output locations
cobalt_stage_generated_bin(SDLExample "${COBALT_SDK_BIN_DIR}/" "")
set(TARGET_INSTALL_DIR "${COBALT_OUTPUT_ROOT}/Examples/SDLExample_${COBALT_ARCH}_$<CONFIG>")
cobalt_install_with_deps(SDLExample "${TARGET_INSTALL_DIR}")
cobalt_install_generated_bin("${COBALT_SDK_BIN_DIR}/" "${TARGET_INSTALL_DIR}")

# Define our virtual project folder and file structure
set_target_properties(SDLExample PROPERTIES FOLDER "Examples")
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${SDLExample_SOURCES})
make_paths_relative(COBALT_VERSION_FILES_RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${COBALT_VERSION_FILES})
source_group("Autogenerated" FILES ${COBALT_VERSION_FILES_RELATIVE})
