# Specify our source files
set(Direct3D11Renderer_SOURCES
    "BindingHelpers.cpp"
    "Direct3DDefaultState.cpp"
    "Direct3DGraphicsDevice.cpp"
    "Direct3DGraphicsDeviceEnumerator.cpp"
    "Direct3DFrameBufferOutput.cpp"
    "Direct3DDataArray.cpp"
    "Direct3DDataArrayOutput.cpp"
    "Direct3DStateBuffer.cpp"
    "Direct3DStateBufferLayout.cpp"
    "Direct3DStateGroupNode.cpp"
    "Direct3DTexelArray.cpp"
    "Direct3DTexelArrayOutput.cpp"
    "Direct3DTransferBatch.cpp"
    "Direct3D11RendererFactory.cpp"
    "Direct3DFrameBuffer.cpp"
    "Direct3DRenderer.cpp"
    "Direct3DIndexBuffer.cpp"
    "Direct3DProgramNode.cpp"
    "Direct3DRenderableNode.cpp"
    "Direct3DRenderPassNode.cpp"
    "Direct3DShaderProgram.cpp"
    "Direct3DVertexBuffer.cpp"
)
set(Direct3D11Renderer_HEADERS
    "BindingHelpers.h"
    "BindingHelpers.inl"
    "Direct3DDefaultState.h"
    "Direct3DGraphicsDevice.h"
    "Direct3DGraphicsDeviceEnumerator.h"
    "Direct3DFrameBuffer.h"
    "Direct3DFrameBufferOutput.h"
    "Direct3DHeaders.h"
    "Direct3DNode.h"
    "Direct3DNode.inl"
    "Direct3DProgramNode.h"
    "Direct3DDataArray.h"
    "Direct3DDataArrayOutput.h"
    "Direct3DStateBuffer.h"
    "Direct3DStateBufferLayout.h"
    "Direct3DStateBufferLayout.inl"
    "Direct3DStateGroupNode.h"
    "Direct3DTexelArray.h"
    "Direct3DTexelArrayOutput.h"
    "Direct3DTextureBuffer.h"
    "Direct3DTextureBuffer.inl"
    "Direct3DTextureBuffer1D.h"
    "Direct3DTextureBuffer1D.inl"
    "Direct3DTextureBuffer1DArray.h"
    "Direct3DTextureBuffer1DArray.inl"
    "Direct3DTextureBuffer2D.h"
    "Direct3DTextureBuffer2D.inl"
    "Direct3DTextureBuffer2DArray.h"
    "Direct3DTextureBuffer2DArray.inl"
    "Direct3DTextureBuffer3D.h"
    "Direct3DTextureBuffer3D.inl"
    "Direct3DTextureBufferCube.h"
    "Direct3DTextureBufferCube.inl"
    "Direct3DTextureBufferCubeArray.h"
    "Direct3DTextureBufferCubeArray.inl"
    "Direct3DTextureSampler.h"
    "Direct3DTextureSampler.inl"
    "Direct3DTextureSampler1D.h"
    "Direct3DTextureSampler1D.inl"
    "Direct3DTextureSampler1DArray.h"
    "Direct3DTextureSampler1DArray.inl"
    "Direct3DTextureSampler2D.h"
    "Direct3DTextureSampler2D.inl"
    "Direct3DTextureSampler2DArray.h"
    "Direct3DTextureSampler2DArray.inl"
    "Direct3DTextureSampler3D.h"
    "Direct3DTextureSampler3D.inl"
    "Direct3DTextureSamplerCube.h"
    "Direct3DTextureSamplerCube.inl"
    "Direct3DTextureSamplerCubeArray.h"
    "Direct3DTextureSamplerCubeArray.inl"
    "Direct3DTransferBatch.h"
    "Direct3D11RendererFactory.h"
    "Direct3DRenderer.h"
    "Direct3DRenderer.inl"
    "Direct3DIndexBuffer.h"
    "Direct3DRenderableNode.h"
    "Direct3DRenderPassNode.h"
    "Direct3DShaderProgram.h"
    "Direct3DStateContainer.h"
    "Direct3DStateContainer.inl"
    "Direct3DVertexBuffer.h"
)

# Define our project targets
add_library(Direct3D11Renderer SHARED ${Direct3D11Renderer_SOURCES} ${Direct3D11Renderer_HEADERS} ${COBALT_VERSION_FILES})
add_library(Cobalt::Direct3D11Renderer ALIAS Direct3D11Renderer)
register_clang_format_and_tidy_target(Direct3D11Renderer)
cobalt_apply_compiler_warning_settings(Direct3D11Renderer)

# Set custom compilation/linker settings
target_include_directories(Direct3D11Renderer PRIVATE ${COBALT_VERSION_INFO_DIR})

# Specify our project dependencies
target_link_libraries(Direct3D11Renderer
    PRIVATE
        Cobalt::RendererInterface
        Cobalt::RendererSupport
        Cobalt::ShaderSupport
        Cobalt::TextureFormatConversion
        d3d11
        d3dcompiler
        dxgi
)

# Transfer required files to their output locations
cobalt_configure_sdk_install(Direct3D11Renderer)
cobalt_install_sdk_headers("Renderers" "Direct3D11RendererFactory.h")

# Define our virtual project folder and file structure
set_target_properties(Direct3D11Renderer PROPERTIES FOLDER "Renderers")
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${Direct3D11Renderer_SOURCES} ${Direct3D11Renderer_HEADERS})
make_paths_relative(COBALT_VERSION_FILES_RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${COBALT_VERSION_FILES})
source_group("Autogenerated" FILES ${COBALT_VERSION_FILES_RELATIVE})
source_group("Render Tree/Binding Helpers" FILES
    "BindingHelpers.cpp"
    "BindingHelpers.h"
    "BindingHelpers.inl"
)
source_group("Render Tree/Direct3DDefaultState" FILES
    "Direct3DDefaultState.cpp"
    "Direct3DDefaultState.h"
)
source_group("Render Tree/Direct3DNode" FILES
    "Direct3DNode.h"
    "Direct3DNode.inl"
)
source_group("Render Tree/Direct3DProgramNode" FILES
    "Direct3DProgramNode.cpp"
    "Direct3DProgramNode.h"
)
source_group("Render Tree/Direct3DRenderPassNode" FILES
    "Direct3DRenderPassNode.cpp"
    "Direct3DRenderPassNode.h"
)
source_group("Render Tree/Direct3DRenderableNode" FILES
    "Direct3DRenderableNode.cpp"
    "Direct3DRenderableNode.h"
)
source_group("Render Tree/Direct3DStateContainer" FILES
    "Direct3DStateContainer.h"
    "Direct3DStateContainer.inl"
)
source_group("Render Tree/Direct3DStateGroupNode" FILES
    "Direct3DStateGroupNode.cpp"
    "Direct3DStateGroupNode.h"
)
source_group("Renderer/Direct3DGraphicsDevice" FILES
    "Direct3DGraphicsDevice.cpp"
    "Direct3DGraphicsDevice.h"
)
source_group("Renderer/Direct3DGraphicsDeviceEnumerator" FILES
    "Direct3DGraphicsDeviceEnumerator.cpp"
    "Direct3DGraphicsDeviceEnumerator.h"
)
source_group("Renderer/Direct3DRenderer" FILES
    "Direct3DRenderer.cpp"
    "Direct3DRenderer.h"
    "Direct3DRenderer.inl"
)
source_group("Resources/Batching" FILES
    "Direct3DTransferBatch.cpp"
    "Direct3DTransferBatch.h"
)
source_group("Resources/Data/Direct3DDataArray" FILES
    "Direct3DDataArray.cpp"
    "Direct3DDataArray.h"
)
source_group("Resources/Data/Direct3DDataArrayOutput" FILES
    "Direct3DDataArrayOutput.cpp"
    "Direct3DDataArrayOutput.h"
)
source_group("Resources/Data/Direct3DStateBuffer" FILES
    "Direct3DStateBuffer.cpp"
    "Direct3DStateBuffer.h"
)
source_group("Resources/Data/Direct3DStateBufferLayout" FILES
    "Direct3DStateBufferLayout.cpp"
    "Direct3DStateBufferLayout.h"
    "Direct3DStateBufferLayout.inl"
)
source_group("Resources/Data/Direct3DTexelArray" FILES
    "Direct3DTexelArray.cpp"
    "Direct3DTexelArray.h"
)
source_group("Resources/Data/Direct3DTexelArrayOutput" FILES
    "Direct3DTexelArrayOutput.cpp"
    "Direct3DTexelArrayOutput.h"
)
source_group("Resources/FrameBuffers/Direct3DFrameBuffer" FILES
    "Direct3DFrameBuffer.cpp"
    "Direct3DFrameBuffer.h"
)
source_group("Resources/FrameBuffers/Direct3DFrameBufferOutput" FILES
    "Direct3DFrameBufferOutput.cpp"
    "Direct3DFrameBufferOutput.h"
)
source_group("Resources/Geometry/Direct3DIndexBuffer" FILES
    "Direct3DIndexBuffer.cpp"
    "Direct3DIndexBuffer.h"
)
source_group("Resources/Geometry/Direct3DVertexBuffer" FILES
    "Direct3DVertexBuffer.cpp"
    "Direct3DVertexBuffer.h"
)
source_group("Resources/Images/Direct3DTextureBuffer" FILES
    "Direct3DTextureBuffer.h"
    "Direct3DTextureBuffer.inl"
)
source_group("Resources/Images/Direct3DTextureBuffer1D" FILES
    "Direct3DTextureBuffer1D.h"
    "Direct3DTextureBuffer1D.inl"
)
source_group("Resources/Images/Direct3DTextureBuffer1DArray" FILES
    "Direct3DTextureBuffer1DArray.h"
    "Direct3DTextureBuffer1DArray.inl"
)
source_group("Resources/Images/Direct3DTextureBuffer2D" FILES
    "Direct3DTextureBuffer2D.h"
    "Direct3DTextureBuffer2D.inl"
)
source_group("Resources/Images/Direct3DTextureBuffer2DArray" FILES
    "Direct3DTextureBuffer2DArray.h"
    "Direct3DTextureBuffer2DArray.inl"
)
source_group("Resources/Images/Direct3DTextureBuffer3D" FILES
    "Direct3DTextureBuffer3D.h"
    "Direct3DTextureBuffer3D.inl"
)
source_group("Resources/Images/Direct3DTextureBufferCube" FILES
    "Direct3DTextureBufferCube.h"
    "Direct3DTextureBufferCube.inl"
)
source_group("Resources/Images/Direct3DTextureBufferCubeArray" FILES
    "Direct3DTextureBufferCubeArray.h"
    "Direct3DTextureBufferCubeArray.inl"
)
source_group("Resources/Programs/Direct3DShaderProgram" FILES
    "Direct3DShaderProgram.cpp"
    "Direct3DShaderProgram.h"
)
source_group("Resources/Samplers/Direct3DTextureSampler" FILES
    "Direct3DTextureSampler.h"
    "Direct3DTextureSampler.inl"
)
source_group("Resources/Samplers/Direct3DTextureSampler1D" FILES
    "Direct3DTextureSampler1D.h"
    "Direct3DTextureSampler1D.inl"
)
source_group("Resources/Samplers/Direct3DTextureSampler1DArray" FILES
    "Direct3DTextureSampler1DArray.h"
    "Direct3DTextureSampler1DArray.inl"
)
source_group("Resources/Samplers/Direct3DTextureSampler2D" FILES
    "Direct3DTextureSampler2D.h"
    "Direct3DTextureSampler2D.inl"
)
source_group("Resources/Samplers/Direct3DTextureSampler2DArray" FILES
    "Direct3DTextureSampler2DArray.h"
    "Direct3DTextureSampler2DArray.inl"
)
source_group("Resources/Samplers/Direct3DTextureSampler3D" FILES
    "Direct3DTextureSampler3D.h"
    "Direct3DTextureSampler3D.inl"
)
source_group("Resources/Samplers/Direct3DTextureSamplerCube" FILES
    "Direct3DTextureSamplerCube.h"
    "Direct3DTextureSamplerCube.inl"
)
source_group("Resources/Samplers/Direct3DTextureSamplerCubeArray" FILES
    "Direct3DTextureSamplerCubeArray.h"
    "Direct3DTextureSamplerCubeArray.inl"
)
